Add native type support with Scala and Kotlin DSL wrappers
This commit introduces comprehensive native type support for Scala and
Kotlin, enabling idiomatic language features while maintaining a shared
Java runtime.

- Unboxed primitive array types for zero-boxing performance:
  * boolean[], short[], int[], long[], float[], double[]
  * Direct primitive array encoding/decoding without boxing overhead
  * Comprehensive PgJson/PgText/PgRead/PgWrite implementations
- Language-specific type mappings throughout code generator
- Scala BigDecimal ↔ java.math.BigDecimal conversion support

Complete wrapper layers for Kotlin and Scala over Java runtime:
- **Kotlin DSL** (typo-dsl-kotlin/): 17+ wrapper classes
  * Native Optional, Iterable, Iterator support
  * Kotlin-friendly naming and idioms
  * Extension functions for ergonomic API
- **Scala DSL** (typo-dsl-scala/): 18+ wrapper classes
  * Native Option, List, Iterator, Map support
  * Scala collection integration
  * Type-safe BigDecimal conversions

- Static import support for Fragment.interpolate() in Java/Kotlin
- Runtime string interpolation using rt() helper
- Type-aware code generation per target language
- PostgresAdapter selects unboxed vs boxed array types by language

Added 7 primitive array PgTypes with direct implementations:
- PgTypes.boolArrayUnboxed, int2ArrayUnboxed, int4ArrayUnboxed,
  int8ArrayUnboxed, float4ArrayUnboxed, float8ArrayUnboxed
- Zero-boxing JSON/JDBC/COPY roundtrip codecs
- Comprehensive test coverage in tester.java (126+ type tests)

- TypeSupportKotlin.scala: Kotlin-specific type mappings
- PostgresAdapter.scala: Language-aware array type selection
- FilesRelation.scala: Proper RowParser type handling for DSLs
- DbLibTypo.scala: Fixed string interpolation for exception messages

Scala/Kotlin code now uses native types:
- Scala: Array[Int] with PgTypes.int4ArrayUnboxed (zero-boxing)
- Kotlin: IntArray with native Kotlin types
- Java: Integer[] (unchanged, JDBC compatibility)

Wrappers del