@@ -5,63 +5,63 @@
  */
 package adventureworks.production.productdescription;
 
-import adventureworks.customtypes.TypoLocalDateTime;
-import adventureworks.customtypes.TypoUUID;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 import typo.dsl.FieldsExpr;
 import typo.dsl.Path;
+import typo.dsl.RelationStructure;
 import typo.dsl.SqlExpr.Field;
 import typo.dsl.SqlExpr.FieldLike;
 import typo.dsl.SqlExpr.IdField;
-import typo.dsl.Structure.Relation;
 import typo.runtime.PgTypes;
 import typo.runtime.RowParser;
 
 public interface ProductdescriptionFields extends FieldsExpr<ProductdescriptionRow> {
-  record Impl(List<Path> _path) implements ProductdescriptionFields, Relation<ProductdescriptionFields, ProductdescriptionRow> {
+  record Impl(List<Path> _path) implements ProductdescriptionFields, RelationStructure<ProductdescriptionFields, ProductdescriptionRow> {
     @Override
     public IdField<ProductdescriptionId, ProductdescriptionRow> productdescriptionid() {
       return new IdField<ProductdescriptionId, ProductdescriptionRow>(_path, "productdescriptionid", ProductdescriptionRow::productdescriptionid, Optional.empty(), Optional.of("int4"), (row, value) -> row.withProductdescriptionid(value), ProductdescriptionId.pgType);
     };
 
     @Override
-    public Field</* max 400 chars */ String, ProductdescriptionRow> description() {
-      return new Field</* max 400 chars */ String, ProductdescriptionRow>(_path, "description", ProductdescriptionRow::description, Optional.empty(), Optional.empty(), (row, value) -> row.withDescription(value), PgTypes.text);
+    public Field<String, ProductdescriptionRow> description() {
+      return new Field<String, ProductdescriptionRow>(_path, "description", ProductdescriptionRow::description, Optional.empty(), Optional.empty(), (row, value) -> row.withDescription(value), PgTypes.text);
     };
 
     @Override
-    public Field<TypoUUID, ProductdescriptionRow> rowguid() {
-      return new Field<TypoUUID, ProductdescriptionRow>(_path, "rowguid", ProductdescriptionRow::rowguid, Optional.empty(), Optional.of("uuid"), (row, value) -> row.withRowguid(value), TypoUUID.pgType);
+    public Field<UUID, ProductdescriptionRow> rowguid() {
+      return new Field<UUID, ProductdescriptionRow>(_path, "rowguid", ProductdescriptionRow::rowguid, Optional.empty(), Optional.of("uuid"), (row, value) -> row.withRowguid(value), PgTypes.uuid);
     };
 
     @Override
-    public Field<TypoLocalDateTime, ProductdescriptionRow> modifieddate() {
-      return new Field<TypoLocalDateTime, ProductdescriptionRow>(_path, "modifieddate", ProductdescriptionRow::modifieddate, Optional.of("text"), Optional.of("timestamp"), (row, value) -> row.withModifieddate(value), TypoLocalDateTime.pgType);
+    public Field<LocalDateTime, ProductdescriptionRow> modifieddate() {
+      return new Field<LocalDateTime, ProductdescriptionRow>(_path, "modifieddate", ProductdescriptionRow::modifieddate, Optional.empty(), Optional.of("timestamp"), (row, value) -> row.withModifieddate(value), PgTypes.timestamp);
     };
 
     @Override
     public List<FieldLike<?, ProductdescriptionRow>> columns() {
-      return List.of(this.productdescriptionid(), this.description(), this.rowguid(), this.modifieddate());
+      return java.util.List.of(this.productdescriptionid(), this.description(), this.rowguid(), this.modifieddate());
     };
 
     @Override
-    public Relation<ProductdescriptionFields, ProductdescriptionRow> copy(List<Path> _path) {
+    public RelationStructure<ProductdescriptionFields, ProductdescriptionRow> withPaths(List<Path> _path) {
       return new Impl(_path);
     };
   };
 
   static Impl structure() {
-    return new Impl(List.of());
+    return new Impl(java.util.Collections.emptyList());
   };
 
   IdField<ProductdescriptionId, ProductdescriptionRow> productdescriptionid();
 
-  Field</* max 400 chars */ String, ProductdescriptionRow> description();
+  Field<String, ProductdescriptionRow> description();
 
-  Field<TypoUUID, ProductdescriptionRow> rowguid();
+  Field<UUID, ProductdescriptionRow> rowguid();
 
-  Field<TypoLocalDateTime, ProductdescriptionRow> modifieddate();
+  Field<LocalDateTime, ProductdescriptionRow> modifieddate();
 
   @Override
   List<FieldLike<?, ProductdescriptionRow>> columns();
